[package]
name = "rustball"
version = "0.1.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]

[dependencies]
cookie = "0.1.21"
hyper = "0.6.4"
oauthcli="0.0.7"
rustc-serialize = "0.3.15"
rustful = "0.3.0"
url = "0.2.36"

[dependencies.bson]
git = "https://github.com/zonyitoo/bson-rs"
ref = "a62d7448682455642e759088138592a508c25150"

[dependencies.mongodb]
git = "https://github.com/mongodbinc-interns/mongo-rust-driver-prototype"
branch = "1.0"
